my-nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: nginx-demo
spec:
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 8080

  #tls:
    #termination: edge
    #insecureEdgeTerminationPolicy: Redirect
